--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                                     <img src="./dist/assets/menu_image.png" alt="careers">
                                 </li>
                                 <li class="width-1-4">
-                                    <a href="#">Coutact us</a>
+                                    <a href="#">Contact us</a>
                                     <img src="./dist/assets/menu_image.png" alt="contact-us">
                                 </li>
                             </ul>
