Refactoring Tabs and Slider

--- a/index.html
+++ b/index.html
@@ -151,9 +151,57 @@
     <div class="container overflow-h d-flex-descktop">
         <div class="tabs-wrap width-2-3 d-flex-descktop overflow-h">
             <ul class="tabs-nav">
-                <li class="active">Tab1</li>
-                <li>Tab2</li>
-                <li>Tab3</li>
+                <li class="tab-button active">Tab1</li>
+                <li class="tab-button">Tab2</li>
+                <li class="tab-button">Tab3</li>
+            </ul>
+            <div class="tabs-content">
+                <div class="item display">
+                    <h2>Tabs with soft transitioning effect.</h2>
+                    <p class="paragraph-style ">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                    </p>
+                    <p class="paragraph-style">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.
+                    </p>
+                    <a href="#" class="primary-btn btn-simple">Download</a>
+                </div>
+                <div class="item">
+                    <h2>Tabs with soft transitioning effect.</h2>
+                    <p class="paragraph-style ">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
+                        justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque
+                        penatibus et magnis dis parturient montes.
+                    </p>
+                    <a href="#" class="primary-btn btn-simple">Download</a>
+                </div>
+                <div class="item">
+                    <h2>Tabs with soft transitioning effect.</h2>
+                    <p class="paragraph-style">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
+                        bibendum laoreet.
+                    </p>
+                    <a href="#" class="primary-btn btn-simple">Download</a>
+                </div>
+            </div>
+        </div>
+        <div class="img-wrap width-1-3">
+            <img src="./dist/assets/image_right_u255.svg" alt="tabs-img">
+        </div>
+    </div>
+</section>
+<section class="tabs">
+    <div class="container overflow-h d-flex-descktop">
+        <div class="tabs-wrap-second width-2-3 d-flex-descktop overflow-h">
+            <ul class="tabs-nav">
+                <li class="tab-button active">Tab1</li>
+                <li class="tab-button">Tab2</li>
+                <li class="tab-button">Tab3</li>
             </ul>
             <div class="tabs-content">
                 <div class="item display">
@@ -342,12 +390,12 @@
     </div>
 </section>
 <section class="testimonials">
-    <div class="container">
+    <div class="container margin-b-30">
         <h2 class="title-large title-decor decor-center text-align-c text-upper">What our customers are saying</h2>
         <p class="paragraph-style margin-b-80 text-align-c">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <div class="slider">
+        <div class="slider slider-first">
             <ul class="testimonial-slider d-flex overflow-h">
-                <li class="width-1-3">
+                <li class="item width-1-3 1">
                     <div class="card">
                         <div class="text">
                             <p class="paragraph-style">
@@ -367,7 +415,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="width-1-3">
+                <li class="item width-1-3 2">
                     <div class="card">
                         <div class="text">
                             <p class="paragraph-style">
@@ -391,7 +439,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="width-1-3">
+                <li class="item width-1-3 3">
                     <div class="card">
                         <div class="text">
                             <p class="paragraph-style"> elit. Doloribus
@@ -413,7 +461,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="width-1-3">
+                <li class="item width-1-3 4">
                     <div class="card">
                         <div class="text">
                             <p class="paragraph-style">
@@ -433,7 +481,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="width-1-3">
+                <li class="item width-1-3 5">
                     <div class="card">
                         <div class="text">
                             <p class="paragraph-style">
@@ -455,7 +503,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="width-1-3">
+                <li class="item width-1-3 6">
                     <div class="card">
                         <div class="text">
                             <p class="paragraph-style">
@@ -480,8 +528,149 @@
                     </div>
                 </li>
             </ul>
-            <button id="prev" class="arrow-slider prev"><img src="./dist/assets/left_arrow.png" alt="prev"></button>
-            <button id="next" class="arrow-slider next"><img src="./dist/assets/right_arrow.png" alt="next"></button>
+            <button class="arrow-slider prev"><img src="./dist/assets/left_arrow.png" alt="prev"></button>
+            <button class="arrow-slider next"><img src="./dist/assets/right_arrow.png" alt="next"></button>
+        </div>
+    </div>
+    <div class="container">
+        <h2 class="title-large title-decor decor-center text-align-c text-upper">Second slider for testing</h2>
+        <div class="slider slider-second">
+            <ul class="testimonial-slider d-flex overflow-h">
+                <li class="item width-1-3 1">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                        </div>
+                        <div class="client overflow-h d-flex">
+                            <div class="width-1-3">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 margin-t-15 margin-l-20">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="item width-1-3 2">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.
+                            </p>
+                        </div>
+                        <div class="client d-flex overflow-h">
+                            <div class="width-1-3">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 margin-t-15 margin-l-20">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="item width-1-3 3">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style"> elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.
+                            </p>
+                        </div>
+                        <div class="client d-flex overflow-h">
+                            <div class="width-1-3">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 margin-t-15 margin-l-20">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="item width-1-3 4">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet
+                            </p>
+                        </div>
+                        <div class="client d-flex overflow-h">
+                            <div class="width-1-3">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 margin-t-15 margin-l-20">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="item width-1-3 5">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedi
+                            </p>
+                        </div>
+                        <div class="client d-flex overflow-h">
+                            <div class="width-1-3">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 margin-t-15 margin-l-20">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li class="item width-1-3 6">
+                    <div class="card">
+                        <div class="text">
+                            <p class="paragraph-style">
+                                Lorem ipsum dolor sit amet,
+                                consectetur adipisicing elit. Doloribus
+                                accusamus expedita repellat similique
+                                odio aspernatur ex, architecto eaque
+                                quo suscipit.
+                            </p>
+                        </div>
+                        <div class="client d-flex overflow-h">
+                            <div class="width-1-3">
+                                <div class="circle-photo overflow-h">
+                                    <img src="./dist/assets/avatar_2_u231.svg" alt="#">
+                                </div>
+                            </div>
+                            <div class="width-2-3 margin-t-15 margin-l-20">
+                                <p class="title-small name">Jeremy H.</p>
+                                <p class="paragraph-style">Manage</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+            <button class="arrow-slider prev"><img src="./dist/assets/left_arrow.png" alt="prev"></button>
+            <button class="arrow-slider next"><img src="./dist/assets/right_arrow.png" alt="next"></button>
         </div>
     </div>
 </section>
