--- a/index.html
+++ b/index.html
@@ -12,91 +12,88 @@
             <img src="./dist/assets/logo.svg" about="pithcbook-logo">
         </div>
         <div class="burger" id="menu-btn">
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="burger-line"></span>
+            <span class="burger-line"></span>
+            <span class="burger-line"></span>
         </div>
         <nav class="main-nav">
             <ul class="menu-list">
-                <li class="submenu-isset">
-                    <a href="#">Features</a>
+                <li class="menu-list-item submenu-isset">
+                    <a href="#" class="menu-link">Features</a>
                     <div class="sub-menu-hidden">
                         <div class="container-menu overflow-h d-flex-descktop">
                             <ul class="top-links width-1-2 flex-wrap d-flex overflow-h">
-                                <li class="width-1-4">
-                                    <a href="#">About us</a>
+                                <li class="top-link-wrap width-1-4 d-flex flex-direction-column align-items-center">
+                                    <a href="#" class="top-link">About us</a>
                                     <img src="./dist/assets/menu_image.png" alt="about-us">
                                 </li>
-                                <li class="width-1-4">
-                                    <a href="#">Our partners</a>
+                                <li class="top-link-wrap width-1-4 d-flex flex-direction-column align-items-center">
+                                    <a href="#" class="top-link">Our partners</a>
                                     <img src="./dist/assets/menu_image.png" alt="out-partners">
                                 </li>
-                                <li class="width-1-4">
-                                    <a href="#">Careers</a>
+                                <li class="top-link-wrap width-1-4 d-flex flex-direction-column align-items-center">
+                                    <a href="#" class="top-link">Careers</a>
                                     <img src="./dist/assets/menu_image.png" alt="careers">
                                 </li>
-                                <li class="width-1-4">
-                                    <a href="#">Contact us</a>
+                                <li class="top-link-wrap width-1-4 d-flex flex-direction-column align-items-center">
+                                    <a href="#" class="top-link">Contact us</a>
                                     <img src="./dist/assets/menu_image.png" alt="contact-us">
                                 </li>
                             </ul>
                             <div class="width-1-2">
                                 <ul class="sub-menu">
-                                    <li><a href="#">Product</a></li>
-                                    <li><a href="#">API and Datafeed</a></li>
-                                    <li><a href="#">Platform</a></li>
-                                    <li><a href="#">Mobile</a></li>
-                                    <li><a href="#">News & Analysis</a></li>
-                                    <li><a href="#">Reports</a></li>
-                                    <li><a href="#">Videos</a></li>
-                                    <li><a href="#">Subscribe to N&A</a></li>
-                                    <li><a href="#">News & Analysis</a></li>
-                                    <li><a href="#">Reports</a></li>
-                                    <li><a href="#">Videos</a></li>
-                                    <li><a href="#">Subscribe to N&A</a></li>
-                                    <li><a href="#">News & Analysis</a></li>
-                                    <li><a href="#">Reports</a></li>
-                                    <li><a href="#">Videos</a></li>
-                                    <li><a href="#">Subscribe to N&A</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Product</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">API and Datafeed</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Platform</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Mobile</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">News & Analysis</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Reports</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Videos</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Subscribe to N&A</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">News & Analysis</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Reports</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Videos</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Subscribe to N&A</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">News & Analysis</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Reports</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Videos</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Subscribe to N&A</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li class="submenu-isset"><a href="#">Reviews</a>
+                <li class="menu-list-item"><a href="#" class="menu-link">About</a></li>
+                <li class="menu-list-item"><a href="#" class="menu-link">Pricing</a></li>
+                <li class="submenu-isset menu-list-item"><a href="#" class="menu-link">Reviews</a>
                     <div class="sub-menu-hidden">
                         <div class="container-menu d-flex-descktop overflow-h">
-                            <ul class="width-1-2 overflow-h flex-wrap d-flex">
-                                <li class="width-1-4">
-                                    <a href="#">Our partners</a>
+                            <ul class="top-links width-1-2 overflow-h flex-wrap d-flex">
+                                <li class="top-link-wrap width-1-4 d-flex flex-direction-column align-items-center">
+                                    <a href="#" class="top-link">Our partners</a>
                                     <img src="./dist/assets/menu_image.png" alt="partners">
                                 </li>
-                                <li class="width-1-4">
-                                    <a href="#">Careers</a>
+                                <li class="top-link-wrap width-1-4 d-flex flex-direction-column align-items-center">
+                                    <a href="#" class="top-link">Careers</a>
                                     <img src="./dist/assets/menu_image.png" alt="Careers">
                                 </li>
                             </ul>
                             <div class="width-1-2">
                                 <ul class="sub-menu">
-                                    <li><a href="#">Product</a></li>
-                                    <li><a href="#">API and Datafeed</a></li>
-                                    <li><a href="#">Platform</a></li>
-                                    <li><a href="#">Mobile</a></li>
-                                    <li><a href="#">News & Analysis</a></li>
-                                    <li><a href="#">Reports</a></li>
-                                    <li><a href="#">Videos</a></li>
-                                    <li><a href="#">Subscribe to N&A</a></li>
-                                    <li><a href="#">News & Analysis</a></li>
-                                    <li><a href="#">Reports</a></li>
-                                    <li><a href="#">Videos</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Product</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">API and Datafeed</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Platform</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Mobile</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">News & Analysis</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Reports</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Videos</a></li>
+                                    <li class="sub-menu-item"><a href="#" class="sub-menu-link">Subscribe to N&A</a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </li>
-                <li><a href="#">Contact</a></li>
+                <li class="menu-list-item"><a href="#" class="menu-link">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -157,7 +154,7 @@
             </ul>
             <div class="tabs-content">
                 <div class="item display">
-                    <h2>Tabs with soft transitioning effect.</h2>
+                    <h2 class="tab-title">Tabs with soft transitioning effect.</h2>
                     <p class="paragraph-style ">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
@@ -171,7 +168,7 @@
                     <a href="#" class="primary-btn btn-simple">Download</a>
                 </div>
                 <div class="item">
-                    <h2>Tabs with soft transitioning effect.</h2>
+                    <h2 class="tab-title">Tabs with soft transitioning effect.</h2>
                     <p class="paragraph-style ">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
@@ -181,7 +178,7 @@
                     <a href="#" class="primary-btn btn-simple">Download</a>
                 </div>
                 <div class="item">
-                    <h2>Tabs with soft transitioning effect.</h2>
+                    <h2 class="tab-title">Tabs with soft transitioning effect.</h2>
                     <p class="paragraph-style">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet.
@@ -205,7 +202,7 @@
             </ul>
             <div class="tabs-content">
                 <div class="item display">
-                    <h2>Tabs with soft transitioning effect.</h2>
+                    <h2 class="tab-title">Tabs with soft transitioning effect.</h2>
                     <p class="paragraph-style ">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
@@ -219,7 +216,7 @@
                     <a href="#" class="primary-btn btn-simple">Download</a>
                 </div>
                 <div class="item">
-                    <h2>Tabs with soft transitioning effect.</h2>
+                    <h2 class="tab-title">Tabs with soft transitioning effect.</h2>
                     <p class="paragraph-style ">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra
@@ -229,7 +226,7 @@
                     <a href="#" class="primary-btn btn-simple">Download</a>
                 </div>
                 <div class="item">
-                    <h2>Tabs with soft transitioning effect.</h2>
+                    <h2 class="tab-title">Tabs with soft transitioning effect.</h2>
                     <p class="paragraph-style">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod
                         bibendum laoreet.
@@ -254,15 +251,15 @@
                 euismod bibendum laoreet. Proin gravida dolor sit amet lacus
                 accumsan et viverra justo commodo.</p>
             <ul class="list">
-                <li>
-                    <h3>Title</h3>
+                <li class="list-item">
+                    <h3 class="list-title">Title</h3>
                     <p class="paragraph-style">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Aenean euismod bibendum laoreet.
                     </p>
                 </li>
-                <li>
-                    <h3>Title</h3>
+                <li class="list-item">
+                    <h3 class="list-title">Title</h3>
                     <p class="paragraph-style">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Aenean euismod bibendum laoreet. Proin gravida dolor
@@ -707,13 +704,13 @@
 <footer class="footer-main">
     <div class="container text-align-c">
         <ul class="social-icons">
-            <li><a href="#" target="_blank" class="fb"></a></li>
-            <li><a href="#" target="_blank" class="twitter"></a></li>
-            <li><a href="#" target="_blank" class="g-plus"></a></li>
-            <li><a href="#" target="_blank" class="pinterest"></a></li>
-            <li><a href="#" target="_blank" class="instagram"></a></li>
-            <li><a href="#" target="_blank" class="stumbleupon"></a></li>
-            <li><a href="#" target="_blank" class="rss"></a></li>
+            <li class="social-item"><a href="#" target="_blank" class="fb"></a></li>
+            <li class="social-item"><a href="#" target="_blank" class="twitter"></a></li>
+            <li class="social-item"><a href="#" target="_blank" class="g-plus"></a></li>
+            <li class="social-item"><a href="#" target="_blank" class="pinterest"></a></li>
+            <li class="social-item"><a href="#" target="_blank" class="instagram"></a></li>
+            <li class="social-item"><a href="#" target="_blank" class="stumbleupon"></a></li>
+            <li class="social-item"><a href="#" target="_blank" class="rss"></a></li>
         </ul>
         <p class="paragraph-style">© 2016 PitchBook</p>
     </div>
